--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ body{
 <!-- Ganti VIDEO_ID_YOUTUBE dengan id video YouTube mu (contoh: 'dQw4w9WgXcQ') -->
 <!-- Catatan: jika autoplay diblokir, tombol Play Music akan muncul -->
 <div id="yt-player-container" style="position:fixed; left:-9999px; top:-9999px; width:1px; height:1px; overflow:hidden;">
-  <iframe id="yt-player" src="https://www.youtube.com/embed/umzYz7bpWTM?autoplay=1&loop=1&playlist=RDumzYz7bpWTM&controls=0&iv_load_policy=3&modestbranding=1&rel=0" frameborder="0" allow="autoplay; encrypted-media"></iframe>
+  <iframe id="yt-player" src="https://www.youtube.com/embed/QPL2JvRCTtI?autoplay=1&loop=1&playlist=QPL2JvRCTtI&controls=0&iv_load_policy=3&modestbranding=1&rel=0" frameborder="0" allow="autoplay; encrypted-media"></iframe>
 </div>
 
 <!-- Play music button (for fallback) -->
@@ -345,7 +345,7 @@ body{
         <!-- GANTI src berikut dengan Google Maps Embed link lokasi acara -->
         <!-- Contoh format iframe embed dari Google Maps:
              https://www.google.com/maps/embed?pb=...  -->
-        <iframe id="gmap" src="https://www.google.com/maps/embed?pb=1Kpg4MVqE1WuGmk78" allowfullscreen loading="lazy"></iframe>
+        <iframe id="gmap" src="https://maps.app.goo.gl/1Kpg4MVqE1WuGmk78" allowfullscreen loading="lazy"></iframe>
       </div>
     </div>
 
