--- a/index.html
+++ b/index.html
@@ -257,6 +257,71 @@ body{
   font-size:13px;
   color:#444;
 }
+
+/* --- Tambahan perbaikan tampilan mobile dan animasi --- */
+
+/* Fade-in animation */
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.section {
+  animation: fadeInUp 0.8s ease forwards;
+  opacity: 0;
+}
+.section.visible { opacity: 1; }
+
+/* Body background halus */
+body {
+  background: linear-gradient(180deg, #fff9f5 0%, #fff 100%), 
+              url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+  background-blend-mode: soft-light;
+}
+
+/* Tombol interaktif */
+.btn {
+  transition: all 0.3s ease;
+}
+.btn:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 15px rgba(128,0,0,0.2);
+}
+
+/* Tampilan mobile */
+@media (max-width: 768px) {
+  .container {
+    margin: 10px;
+    box-shadow: none;
+    border-radius: 10px;
+  }
+  .sidebar {
+    flex-direction: column;
+    gap: 4px;
+    text-align: center;
+    border-bottom: 3px solid var(--emas);
+  }
+  .sidebar .names { font-size: 24px; }
+  .sidebar .date { font-size: 14px; }
+  .main { padding: 20px; }
+  .actions { flex-wrap: wrap; justify-content: center; }
+  .btn { flex: 1; font-size: 14px; padding: 10px 8px; }
+  iframe {
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+  .section {
+    background: #fff;
+    box-shadow: 0 6px 14px rgba(0,0,0,0.05);
+    margin-top: 20px;
+  }
+}
+
+/* Animasi amplop lebih halus */
+.envelope .body,
+.envelope .flap {
+  transition: transform 1s cubic-bezier(.25,.8,.25,1);
+}
 </style>
 </head>
 <body>
@@ -423,13 +488,26 @@ cover.addEventListener('click', (e)=>{ if(e.target===cover) openEnvelope(); });
 
 function openEnvelope(){
   envelope.classList.add('open');
-  // after animation, hide cover and show main content
   setTimeout(()=>{
-    cover.style.display='none';
-    mainContent.style.display='flex';
-    tryPlayMusic();
+    cover.style.opacity='0';
+    cover.style.transition='opacity 0.8s ease';
+    setTimeout(()=>{
+      cover.style.display='none';
+      mainContent.style.display='flex';
+      mainContent.style.animation = 'fadeInUp 1s ease';
+      tryPlayMusic();
+    }, 800);
   }, 900);
 }
+
+/* ---- animasi fade saat scroll ---- */
+const sections = document.querySelectorAll('.section');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if(entry.isIntersecting) entry.target.classList.add('visible');
+  });
+}, { threshold: 0.2 });
+sections.forEach(sec => observer.observe(sec));
 
 /* -----------------------
    Scroll helpers
